@@ -4,8 +4,6 @@
   xmlns:gocept="http://namespaces.gocept.com/zcml"
   i18n_domain="zeit.cms">
 
-  <adapter factory=".comment.comment_browse_location" />
-
   <browser:page
     name="view.html"
     for="zeit.content.article.interfaces.IArticle"
